Manipulation tests done

--- a/BRSM_Project.ipynb
+++ b/BRSM_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "231de039",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "df6e0ffc",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "4       0.844474    0.812106  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5815,7 +5815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "d6dace89",
    "metadata": {},
    "outputs": [
@@ -6116,7 +6116,7 @@
        "25       0.873985    0.812106  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6147,7 +6147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "37679a5c",
    "metadata": {},
    "outputs": [],
@@ -6171,7 +6171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "b2f84625",
    "metadata": {},
    "outputs": [
@@ -6245,7 +6245,7 @@
        "4  55        -0.337246         -1.746263"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6253,6 +6253,534 @@
    "source": [
     "df_change_behav_liking.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "984fa0d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_change = pd.merge(df_change, df_change_behav_liking, on='ID')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3dbca4",
+   "metadata": {},
+   "source": [
+    "- Making datasets for each site"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e804f0ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_c_caltech1 = df_change.loc[df_change['site']=='Caltech1']\n",
+    "df_c_caltech2 = df_change.loc[df_change['site']=='Caltech2']\n",
+    "df_c_hamburg = df_change.loc[df_change['site']=='Hamburg']\n",
+    "df_c_sydney = df_change.loc[df_change['site']=='Sydney']\n",
+    "df_c_telaviv = df_change.loc[df_change['site']=='Tel_Aviv']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c244f47e",
+   "metadata": {},
+   "source": [
+    "# Manipulation checks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7531d46a",
+   "metadata": {},
+   "source": [
+    "### Hunger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "89f7b90b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hunger = df_change[['ID','group','prepost','site','hunger']].groupby(['ID','group','prepost','site']).mean().reset_index()\n",
+    "df_hunger = df_hunger.loc[df_hunger['ID']!=115] # Drop 115 because was measured in wrong scale mentioned in paper implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "85a8e789",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>group</th>\n",
+       "      <th>prepost</th>\n",
+       "      <th>site</th>\n",
+       "      <th>hunger</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  group prepost      site  hunger\n",
+       "0  51  1-day    post  Caltech1     4.0\n",
+       "1  51  1-day     pre  Caltech1     9.0\n",
+       "2  52  1-day    post  Caltech1     2.0\n",
+       "3  52  1-day     pre  Caltech1    10.0\n",
+       "4  53  1-day    post  Caltech1     6.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hunger.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffd3ea68",
+   "metadata": {},
+   "source": [
+    "- Caltech1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c7ed5c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hung_cal1 = df_hunger.loc[df_hunger['site']=='Caltech1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ae8cc487",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>group</th>\n",
+       "      <th>prepost</th>\n",
+       "      <th>site</th>\n",
+       "      <th>hunger</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>post</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  group prepost      site  hunger\n",
+       "0  51  1-day    post  Caltech1     4.0\n",
+       "1  51  1-day     pre  Caltech1     9.0\n",
+       "2  52  1-day    post  Caltech1     2.0\n",
+       "3  52  1-day     pre  Caltech1    10.0\n",
+       "4  53  1-day    post  Caltech1     6.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hung_cal1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5ad219cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Anova\n",
+      "======================================\n",
+      "        F Value  Num DF  Den DF Pr > F\n",
+      "--------------------------------------\n",
+      "prepost 198.8680 1.0000 61.0000 0.0000\n",
+      "======================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.anova import AnovaRM\n",
+    "print(AnovaRM(data=df_hung_cal1, depvar='hunger', subject='ID', within=['prepost']).fit())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bbd3a25",
+   "metadata": {},
+   "source": [
+    "- F statistic is 198 and P value is 0. There fore reject the null hypothesis. That is there is a diff between hunger level pre and post devaluation phase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cee8e59",
+   "metadata": {},
+   "source": [
+    "- Repeat the above test for all sites we get statistically significant results\n",
+    "- Check what are the corrections in ANOVA used here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c70ca6",
+   "metadata": {},
+   "source": [
+    "### Liking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1f167cdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_liking = df_change[['ID','prepost','cue','group','site','outcomeliking']].groupby(['ID','prepost','cue','group','site']).mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d33d04d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = df_liking.ID.unique()\n",
+    "data = []\n",
+    "for i in ids:\n",
+    "    curr_group = df_liking.loc[df_liking['ID'] == i].iloc[0]['group']\n",
+    "    curr_site = df_liking.loc[df_liking['ID'] == i].iloc[0]['site']\n",
+    "    liking_index_1 = ((df_liking.loc[(df_liking['ID'] == i) & (df_liking['prepost'] == 'post') & (df_liking['cue'] == 'Valued') ]['outcomeliking'].iloc[0])- \n",
+    "     (df_liking.loc[(df_liking['ID'] == i) & (df_liking['prepost'] == 'post') & (df_liking['cue'] == 'Devalued') ]['outcomeliking'].iloc[0]))\n",
+    "    liking_index_2 = ((df_liking.loc[(df_liking['ID'] == i) & (df_liking['prepost'] == 'pre') & (df_liking['cue'] == 'Valued') ]['outcomeliking'].iloc[0])-\n",
+    "                      (df_liking.loc[(df_liking['ID'] == i) & (df_liking['prepost'] == 'pre') & (df_liking['cue'] == 'Devalued') ]['outcomeliking'].iloc[0]))\n",
+    "    data.append([i,'post',curr_group,curr_site,liking_index_1])\n",
+    "    data.append([i,'pre',curr_group,curr_site,liking_index_2])\n",
+    "                      \n",
+    "df_change_behav_liking = pd.DataFrame(data, columns = ['ID', 'prepost','group','site','outcomeliking'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "abcfc575",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>prepost</th>\n",
+       "      <th>group</th>\n",
+       "      <th>site</th>\n",
+       "      <th>outcomeliking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51</td>\n",
+       "      <td>post</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>52</td>\n",
+       "      <td>post</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>52</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>post</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>53</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54</td>\n",
+       "      <td>post</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>54</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>55</td>\n",
+       "      <td>post</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>-4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>55</td>\n",
+       "      <td>pre</td>\n",
+       "      <td>1-day</td>\n",
+       "      <td>Caltech1</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID prepost  group      site  outcomeliking\n",
+       "0  51    post  1-day  Caltech1           -1.0\n",
+       "1  51     pre  1-day  Caltech1           -2.0\n",
+       "2  52    post  1-day  Caltech1            5.0\n",
+       "3  52     pre  1-day  Caltech1            0.0\n",
+       "4  53    post  1-day  Caltech1            6.0\n",
+       "5  53     pre  1-day  Caltech1            4.0\n",
+       "6  54    post  1-day  Caltech1            4.0\n",
+       "7  54     pre  1-day  Caltech1           -1.0\n",
+       "8  55    post  1-day  Caltech1           -4.0\n",
+       "9  55     pre  1-day  Caltech1           -1.0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_change_behav_liking.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "1ce416c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Anova\n",
+      "======================================\n",
+      "        F Value  Num DF  Den DF Pr > F\n",
+      "--------------------------------------\n",
+      "prepost 175.1809 1.0000 61.0000 0.0000\n",
+      "======================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "liking_cal1 = df_change_behav_liking.loc[df_change_behav_liking['site'] == 'Caltech1']\n",
+    "print(AnovaRM(data=liking_cal1, depvar='outcomeliking', subject='ID', within=['prepost']).fit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0d0d81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
